change author.name back

--- a/templates/post.html
+++ b/templates/post.html
@@ -13,7 +13,7 @@
                     <h2 class="subheading">{{post.subtitle}}</h2>
                     <!-- Changed from post.author -->
                     <span class="meta">Posted by
-                        {{post.author}}
+                        {{post.author.name}}
                         on {{post.date}}
                     </span>
                 </div>
