--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <p>(This is placeholder text because I'm too lazy to write anything for now) Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates
+            <p>(This is placeholder text because I'm too lazy to write anything for now, that should tell you something about me 😆) Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates
                 odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
                 consectetur?</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque
